  support to check unittests, etc.

- GTMDebugSelectorValidation to provide something to include in class impls
  to get validation of object/selector pair(s) being implemented so you don't
  have to wait for a runtime invocation failures.  (especially useful for
  things that take a success and failure selector so one doesn't always get
  called)

- added _GTMDevLog (really in GTMDefines) that are a set of macros that can be
  used for logging.  This allows any project to redefine them to direct logging
  into its runtime needs.

- Moved GTMGeometryUtils into Foundation from AppKit

- Removed several HI* calls from GTMGeometryUtils as Carbon UI in general is
  deprecated.

- Xcode configs
  - changed the layout to make it a little easier to tell how to use them.
  - added Leopard or later configs

- Unittest coverage greatly increased

- Added RunMacOSUnitTests shell script. We run this script for starting up our
  unittests because it turns on a variety of "enhancements" (such as zombies,
  scribbling etc) to encourage our unittests to fail for us. It also will run
  the unittests using the _debug frameworks if you have them.
  
  https://connect.apple.com/cgi-bin/WebObjects/MemberSite.woa/wa/getSoftware?bundleID=19915

- Remove NSColor+Theme and NSWorkspace+Theme as they are no longer needed for
  testing things for unittests, instead GTMUnitTestingUtilities.m(Lines 64-79)
  force the user settable things to ensure tests are consistent.

- Added GTMBase64.

- Added GTMHTTPFetcher and GTMProgressMonitorInputStream.

- Moved the data files for unittests into subdirectories call TestData to
  help make it a little easier to find files w/in the main directories.

- GTMDelegatingTableColumn get an overhaul to match the 10.5 sdk so it's closer
  to a dropin for previous sdks.

- Added GTMStackTrace.


Release 1.0.0
14-January-2008

- Initial public release.  Includes some simple utils, xcode configs, and
  some support for doing unit tests of graphical things.